<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_to_my_ingredients_list_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_ingredients"
        android:title="@string/menu_bottom_ingredient_at_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_to_all_recipes_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_recipe"
        android:title="@string/menu_bottom_my_recipes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_to_my_recipes_fragment"
        android:enabled="true"
        android:icon="@drawable/menu_bottom_favourite_list_icon"
        android:title="@string/menu_bottom_favourites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_to_calendar_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/menu_bottom_calendar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_to_social_media_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_social_media"
        android:title="@string/menu_bottom_social_media"
        app:showAsAction="ifRoom" />
</menu>