<resources>
    <string name="app_name" translatable="false">Freezdge</string>
    <string name="app_version" translatable="false">v%s</string>
    <string name="menu_bottom_ingredient_at_home">Ingredients</string>
    <string name="menu_bottom_favourites">Favourites</string>
    <string name="menu_bottom_calendar">Calendar</string>
    <string name="menu_bottom_my_recipes">Recipes</string>
    <string name="menu_bottom_social_media">Community</string>
    <string name="menu_grocery_list">Grocery List</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_info">How to use app?</string>
    <string name="menu_clear_ingredients_list">Clear ingredients list</string>
    <string name="menu_like_social_media">Like</string>
    <string name="ingredients_list_page_name">My ingredients at home</string>

    <!--Toolbar-->
    <string name="toolbar_grocery_list">My grocery list</string>
    <string name="toolbar_search_ingredients">Search Ingredients</string>
    <string name="toolbar_recipe_detail">Recipe detail</string>


    <!--No item found-->
    <string name="no_item_found_favourite">No favourite recipes for the moment</string>
    <string name="no_item_found_recipes">Choose at least one ingredient to see recipes\n\nHowever, you can search our entire recipe database using the search button (top right).</string>
    <string name="no_item_found_calendar">No recipe Scheduled for the moment</string>
    <string name="no_item_found_liked_post">No liked post for the moment</string>
    <string name="no_recipes_found">No recipes found</string>
    <string name="no_item_found_ingredients">Choose your first ingredient</string>
    <string name="no_item_found_grocery">Empty grocery list</string>

    <!--Recipe List item-->
    <string name="recipe_list_number">(%d) recipes found</string>
    <string name="recipe_list_number_one">%d recipe found</string>
    <string name="recipe_list_item_image" translatable="false">image_recipe</string>
    <string name="recipe_list_item_label">Recipe label</string>
    <string name="recipe_grocery_list_dialog_title">The missing ingredients for this recipe</string>
    <string name="recipe_grocery_list_dialog_all_matching">You have all ingredients to realize this recipe !</string>
    <string name="recipe_list_item_no_time_known">No time indicated</string>
    <string name="recipe_list_item_time_min">%d min</string>
    <string name="recipe_list_item_day_scheduled" translatable="false">%s</string>
    <string name="recipe_list_item_time_min_hours">%dh%d</string>
    <string name="recipe_list_item_time_hours">%dh</string>
    <string name="recipe_list_item_preparation_time">Preparation time</string>
    <string name="recipe_list_item_cuisine_type" translatable="false">Cuisine_type</string>
    <string name="recipe_list_item_dish_type" translatable="false">Dish_type</string>
    <string name="recipe_list_item_kcal_notknow">N.C</string>
    <string name="description_image">Description image</string>
    <string name="recipe_matching_percent" translatable="false">%d %%</string>

    <!--Recipe Detail-->
    <string name="recipe_detail_item_label">Recipe title</string>
    <string name="recipe_detail_item_detail_prep_time">Prep : %s</string>
    <string name="recipe_detail_item_detail_cook_time">Cook : %s</string>
    <string name="recipe_detail_item_total_time">Total time : %s</string>
    <string name="recipe_detail_item_number_person">%d pers.</string>
    <string name="recipe_detail_item_recipe_view">Recipe</string>
    <string name="toastNoIngredientResultSearch">No ingredient found</string>
    <string name="search_ingredient_searchview_label">Search ingredient here…</string>
    <string name="search_recipe_searchview_label">Search on recipe name…</string>
    <string name="dialog_cancel_action">Cancelled action</string>
    <string name="dialog_question_grocery">Have you this ingredient at home now?</string>
    <string name="dialog_question_grocery_multiple_ingredients">Have you theses ingredients at home now?</string>
    <string name="dialog_question_clear_ingredients">Do you want to clear your ingredient list?</string>
    <string name="dialog_question_clear_calendar">Do you want to clear all schedules recipes?</string>
    <string name="Yes">Yes</string>

    <!--Ingredients type -->
    <string name="ingredient_type_cream" translatable="false">Crèmerie</string>
    <string name="ingredient_type_fruits_vegetables" translatable="false">Fruits &amp; Légumes</string>
    <string name="ingredient_type_epicerie" translatable="false">Epicerie</string>
    <string name="ingredient_type_fish" translatable="false">Poisson</string>
    <string name="ingredient_type_meat" translatable="false">Viande</string>
    <string name="we_research_recipes_for_you">Please wait</string>

    <!--Login -->
    <string name="loginFacebook">Sign in with Facebook</string>
    <string name="loginGoogle">Sign in with Google</string>
    <string name="appNameDescription">My fridge, my freeze, my Freezdge</string>

    <!--Select day -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="day_dialog">SELECT A DAY</string>
    <string name="recipe_suggestion_dialog">RECIPE SUGGESTION</string>
    <string name="day_ok_dialog">OK</string>

    <!-- LOGIN ACTIVITY -->
    <string name="error_authentication_canceled">Authentication cancelled&#8230;</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="connection_succeed">Authentication successful!</string>
    <string name="button_logout">Logout</string>
    <string name="button_logout_message_dialog">Do you want to logout?</string>


    <!--Change profil -->
    <string name="nav_header_firstname">Hello %s</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="change_photo_profil">Change your profil photo</string>
    <string name="update_profil">Update profil</string>
    <string name="set_error_firstname">Enter a firstname</string>
    <string name="set_error_lastname">Enter a lastname</string>
    <string name="dialog_select_image_take_photo">Take Photo</string>
    <string name="dialog_select_image_choose_from_library">Choose from Library</string>
    <string name="dialog_select_image_cancel">Cancel</string>
    <string name="type_storage_users" translatable="false">users</string>
    <string name="type_storage_posts" translatable="false">posts</string>
    <string name="toast_updated_profil">Profil updated</string>
    <string name="toast_updated_tip">Tip updated</string>
    <string name="toast_created_tip">Tip created</string>
    <string name="toast_created_photo">Photo created</string>
    <string name="toast_updated_photo_post">Updated post</string>


    <!--Social page -->
    <string name="social_media_description">%s, share a cooking tip or a photo of your culinary creation with the Freezdge community!</string>
    <string name="social_media_photo_post">Gallery</string>
    <string name="social_media_camera_post">Camera</string>
    <string name="social_media_tips_post">Tip</string>
    <string name="social_media_like_number_tips">%d people found it useful</string>
    <string name="social_media_like_number_photo">%d people found it great</string>
    <string name="social_media_like_number_tips_you_and_other">You and %d people found it useful</string>
    <string name="social_media_like_number_photo_you_and_other">You and %d people found it great</string>
    <string name="social_media_like_number_tips_one_person">%d people found it useful</string>
    <string name="social_media_like_number_photo_one_person">%d people found it great</string>
    <string name="social_media_like_number_tips_one_person_you">You found it useful</string>
    <string name="social_media_like_number_photo_one_person_you">You found it great</string>
    <string name="social_media_username_post" translatable="false">Alexandra Gnimadi</string>
    <string name="social_media_description_tips_post" translatable="false">Les champignons trempés dans de la sauce aigre douce sont super bons</string>
    <string name="social_media_no_post">No posts found</string>
    <string name="social_media_post_type_photo" translatable="false">Photo</string>
    <string name="social_media_post_type_tips" translatable="false">Tips</string>
    <string name="social_media_post_delete_title_dialog">Delete post</string>
    <string name="social_media_post_delete_message_dialog">Are you sure to delete this post</string>
    <string name="social_media_post_delete_confirmation_dialog">Post deleted</string>
    <string name="social_media_community">A community opens up to you</string>
    <string name="social_media_liked_post">We are looking for your liked post</string>
    <string name="popup_menu_update">Update</string>
    <string name="popup_menu_delete">Delete</string>

    <!--Add post -->
    <string name="title_tips">Tip\'s title</string>
    <string name="title_photo">Photo\'s title (optional)</string>
    <string name="tips_description">Your tip</string>
    <string name="tips_dialog">New tip</string>
    <string name="photo_dialog">New Photo</string>
    <string name="tips_dialog_update">Update tip</string>
    <string name="photo_dialog_update">Update Post</string>
    <string name="publish">Publish</string>
    <string name="set_error_title_tips">Enter a title</string>
    <string name="set_error_description_tips">Enter a tip</string>
    <string name="post_cant_change_photo">You cannot change the photo</string>
    <string name="no_picture_add_photo_dialog">There is no picture</string>


    <!--Step -->
    <string name="step_recipe">Step %d : %s</string>
    <string name="internet_connexion">No internet connection</string>
    <string name="grocery_list_removed">%s has been remove from grocery list</string>
    <string name="ingredient_list_clear">Ingredient list cleared !</string>
    <string name="calendar_list_clear">Schedules recipes are cleared !</string>
    <string name="general_close">Close</string>

    <!--Array string -->
    <string name="array_filter_dessert">Dessert</string>
    <string name="array_filter_entry">Starter</string>
    <string name="array_filter_plat">Principal dish</string>
    <string name="array_filter_cocktail">Cocktail</string>
    <string name="array_filter_other">Other</string>
    <string name="array_filter_dessert_title">Dessert (%d)</string>
    <string name="array_filter_entry_title">Starter (%d)</string>
    <string name="array_filter_plat_title">Principal dish (%d)</string>
    <string name="array_filter_cocktail_title">Cocktail (%d)</string>
    <string name="array_filter_all_title">All (%d)</string>
    <string name="array_dialog_title">Filter</string>
    <string name="array_filter_dessert_search" translatable="false">Desserts</string>
    <string name="array_filter_entry_search" translatable="false">Starter</string>
    <string name="array_filter_plat_search" translatable="false">Main course</string>
    <string name="array_filter_cocktail_search" translatable="false">Drinks</string>
    <string name="google_sign_in">Google sign in failed:(</string>
    <string name="facebook_sign_in">Facebook sign in failed:(</string>

    <!--Onboarding -->
    <string name="onboarding1_title">My ingredients</string>
    <string name="onboarding1_description">I look in my fridge, my freezer or my closets and I add what I\'ve got on the app</string>
    <string name="onboarding2_title">Find my recipes</string>
    <string name="onboarding2_description">I find the list of recipes that correspond to my ingredients</string>
    <string name="onboarding3_title">A personal grocery list</string>
    <string name="onboarding3_description">The recipes I choose as favourites automatically generate my grocery list, as needed</string>
    <string name="onboarding4_title">My Freezdge community!</string>
    <string name="onboarding4_description">I can share my cooking tips, or photos of my cooking skills with the entire Freezdge community</string>
    <string name="start">Start</string>
    <string name="next">Next</string>

    <string name="facebook_app_id" translatable="false">605347353660093</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb605347353660093</string>
    <string name="tiret" translatable="false">-</string>
    <string name="chooseButton">CHOOSE</string>

</resources>
